# FrameworkBenchmarks

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .mention-bot  .travis.bak  .travis.yml  Apache_en_US  CDPGlobalSettings.cdp.override  CL_LocalizationData.ps1  CMakeCache.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  Package.resolved  Project_Information_tests.xht.ml  RC_UAC.ps1  README.md  RS_UAC.ps1  VF_UAC.ps1  Vagrantfile  app.db  async_resource.cc  benchmark.cfg  benchmark.cfg.example  benchmarker.py  create_new_config.py  current_benchmark.txt  current_log.txt  entrypoint.sh  framework_test.py  hooks.cc  installer-bootstrap.ps1  installer.ps1  installer.py  latest.json  package.json  prettytable_result_parser.py  puppet.pp  (+21 more)
frameworks/C++/aeronet/: CMakeLists.txt  README.md  aeronet.dockerfile  benchmark_config.json  config.toml  main.cpp
frameworks/C++/cutelyst/: CMakeLists.txt  README.md  benchmark_config.json  build.sh  config.sh  config.toml  cutelyst-benchmark-app.dockerfile  cutelyst-deps.dockerfile  cutelyst-framework.dockerfile  cutelyst-nginx-base.dockerfile  cutelyst-nginx-my.dockerfile  cutelyst-nginx-pg.dockerfile  cutelyst-nginx.dockerfile  cutelyst-pf-apg-batch.dockerfile  cutelyst-pf-apg.dockerfile  cutelyst-pf-my-nodelay.dockerfile  cutelyst-pf-my.dockerfile  cutelyst-pf-nodelay.dockerfile  cutelyst-pf-pg-nodelay.dockerfile  cutelyst-pf-pg.dockerfile  cutelyst-pg-nginx.dockerfile  cutelyst-shared-setup.dockerfile  cutelyst-t-apg-cutelee.dockerfile  cutelyst-thread-apg-batch.dockerfile  cutelyst-thread-apg.dockerfile  cutelyst-thread-my-cutelee.dockerfile  cutelyst-thread-my-grantlee.dockerfile  cutelyst-thread-my-nodelay.dockerfile  cutelyst-thread-my.dockerfile  cutelyst-thread-nodelay.dockerfile  cutelyst-thread-pg-cutelee.dockerfile  cutelyst-thread-pg-nodelay.dockerfile  cutelyst-thread-pg.dockerfile  cutelyst-thread-pico.dockerfile  cutelyst-thread.dockerfile  cutelyst.dockerfile  nginx.conf  setup.sh  setup_pf.sh  setup_pf_epoll.sh  (+16 more)
frameworks/C++/ltio/: CMakeLists.txt  README.md  benchmark_config.json  http_benchmark.cc  ltio.dockerfile
frameworks/C++/luna/: CMakeLists.txt  README.md  benchmark_config.json  common.h  conanfile.txt  default.cpp  epoll.cpp  luna-base.dockerfile  luna-epoll.dockerfile  luna-thread.dockerfile  luna.dockerfile  setup.sh  setup_epoll.sh  setup_thread.sh  thread.cpp
frameworks/C++/silicon/: CMakeLists.txt  README.md  benchmark_config  benchmark_config.json  config.toml  install.sh  main.cc  setup.sh  setup_epoll_mysql.sh  setup_lwan_mysql.sh  setup_mhd_epoll_mysql.sh  setup_mhd_tpc_mysql.sh  setup_tpc_mysql.sh  silicon-base.dockerfile  silicon.dockerfile  techempower.hh  techempower_lwan.cc  techempower_microhttpd.cc
frameworks/C/h2o/: CMakeLists.txt  README.md  benchmark_config.json  config.toml  h2o.dockerfile  h2o.sh  setup.sh  source_code  start-servers.sh
frameworks/C/octane/: CMakeLists.txt  Makefile  README.md  benchmark_config.json  common.cmake  config.toml  octane.dockerfile  setup.sh
frameworks/Haskell/spock/: .gitignore  LICENSE  README.md  benchmark_config.json  config.toml  setup.sh  source_code  spock.cabal  spock.dockerfile  stack.yaml
frameworks/Rust/Iron/: Cargo.toml  README  benchmark_config  install.sh  setup.py  source_code
frameworks/Rust/actix/: Cargo.toml  README.md  TODO.md  actix-base.dockerfile  actix-core.dockerfile  actix-diesel.dockerfile  actix-http.dockerfile  actix-pg.dockerfile  actix-platform.dockerfile  actix-raw-db.dockerfile  actix-raw.dockerfile  actix-server.dockerfile  actix-web-diesel.dockerfile  actix-web-mongodb.dockerfile  actix-web-pg-deadpool.dockerfile  actix.dockerfile  benchmark_config.json  config.toml  setup.sh  setup_diesel.sh  setup_pg.sh
frameworks/Rust/actix2/: Cargo.toml  README.md  actix2.dockerfile  benchmark_config.json  benchmark_config.json.bak
frameworks/Rust/anansi/: Cargo.toml  README.md  anansi-raw.dockerfile  anansi.dockerfile  benchmark_config.json  settings.toml
frameworks/Rust/astra/: Cargo.toml  README.md  astra.dockerfile  benchmark_config.json  config.toml
frameworks/Rust/axum/: .gitignore  Cargo.toml  README.md  axum-bb8.dockerfile  axum-mongo-pool.dockerfile  axum-mongo-raw.dockerfile  axum-mongo.dockerfile  axum-pg-pool.dockerfile  axum-pg.dockerfile  axum-sqlx.dockerfile  axum.dockerfile  benchmark_config.json  config.toml  run.sh
frameworks/Rust/chopin/: .gitignore  Cargo.toml  README.md  benchmark_config.json  chopin.dockerfile
frameworks/Rust/faf/: .gitignore  Cargo.toml  README.md  benchmark_config.json  config.toml  faf.dockerfile  merged.profdata
frameworks/Rust/faf-ext/: .gitignore  Cargo.toml  README.md  benchmark_config.json  config.toml  faf-ext.dockerfile
frameworks/Rust/gnosis-uring/: Cargo.toml  README.md  benchmark_config.json  cloudbuild-benchmark.yaml  config.toml  gnosis-uring-uring.dockerfile  gnosis-uring.dockerfile
frameworks/Rust/hotaru/: .dockerignore  Cargo.toml  README.md  README_SUBMISSION.md  benchmark_config.json  hotaru.dockerfile  setup.py
frameworks/Rust/hyper/: Cargo.toml  benchmark_config.json  config.toml  hyper-base.dockerfile  hyper-db.dockerfile  hyper-pipeline.dockerfile  hyper.dockerfile  rustfmt.toml  setup.sh
frameworks/Rust/hyperlane/: .gitignore  Cargo.toml  README.md  benchmark_config.json  config.toml  hyperlane.cached_query.dockerfile  hyperlane.db.dockerfile  hyperlane.default.dockerfile  hyperlane.dockerfile  hyperlane.fortunes.dockerfile  hyperlane.json.dockerfile  hyperlane.plaintext.dockerfile  hyperlane.query.dockerfile  hyperlane.update.dockerfile
frameworks/Rust/ignitia/: Cargo.toml  README.md  benchmark_config.json  config.toml  ignitia.dockerfile  rustfmt.toml
frameworks/Rust/iron/: Cargo.toml  benchmark_config.json  build.rs  config.toml  install.sh  iron.dockerfile  setup.sh
frameworks/Rust/khttp/: Cargo.toml  README.md  benchmark_config.json  khttp.dockerfile
snap/bench/: snap-bench.cabal
wai/bench/: bench.cabal  wai.hs
yesod/bench/: Application.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs  bench.cabal
(+27832 files in other folders)
