name:              bench-wai
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         bench
    main-is:           wai.hs
    hs-source-dirs:    .

    ghc-options:       -Wall -threaded -O2 -rtsopts

    extensions: OverloadedStrings

    build-depends: base                          >= 4          && < 5
                 , warp                          >= 2.1
                 , wai                           >= 1.4
                 , text                          >= 1.0
                 , aeson                         >= 0.6.1.0
                 , unix                          >= 2.5
                 , conduit-extra                 >= 1.1
                 , http-types
