name:              bench-wai
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         bench
    main-is:           wai.hs
    hs-source-dirs:    .

    ghc-options:       -Wall -threaded -O2 -rtsopts

    extensions: OverloadedStrings

    build-depends: base                          >= 4          && < 5
                 , aeson                         >= 0.6.1.0
                 , conduit-extra                 >= 1.1
                 , http-types
                 , mighttpd2                     >= 3.0
                 , network                       >= 2.4
                 , text                          >= 1.0
                 , wai                           >= 1.4
                 , warp                          >= 2.1
