name:              bench
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         bench
    main-is:           main.hs
    hs-source-dirs:    src

    ghc-options:       -Wall -threaded -O2 -rtsopts

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                EmptyDataDecls

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2        && < 1.3
                 , text                          >= 0.11       && < 0.12
                 , persistent
                 , persistent-mysql
                 , persistent-mongoDB
                 , warp
                 , unix                          >= 2.5
                 , network-conduit               >= 1.0
                 , primitive                     >= 0.5
                 , mwc-random                    >= 0.12
                 , pool-conduit                  >= 0.1.2
                 , network
                 , mongoDB
                 , aeson
                 , scientific                    >= 0.2.0
