name:                spock
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/spock#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable spock-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , Spock
                     , text
                     , aeson
                     , postgresql-simple
                     , random
                     , transformers
                     , async
                     , mtl
                     , resourcet
                     , http-types
                     , blaze-html
                     , blaze-markup
  other-modules:       Models.Fortune
                     , Models.World
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/spock
