[package]
name = "tfb-actix"
version = "3.0.0"
edition = "2018"

[[bin]]
name = "tfb-web"
path = "src/main_web.rs"

[[bin]]
name = "tfb-web-diesel"
path = "src/main_web_diesel.rs"

[[bin]]
name = "tfb-http"
path = "src/main_http.rs"

[[bin]]
name = "tfb-server"
path = "src/main_server.rs"

[[bin]]
name = "tfb-web-mongodb"
path = "src/main_mongodb.rs"

[[bin]]
name = "tfb-web-pg-deadpool"
path = "src/main_pg_deadpool.rs"

[dependencies]
anyhow = "1"
actix = "0.12"
actix-web = { version = "4.0.0-rc.3", default-features = false, features = ["macros"] }
actix-http = { version = "3.0.0-rc.2", default-features = false }
actix-rt = "2"
actix-codec = "0.4"
actix-server = "2"
actix-service = "2"

askama = "0.11"
bytes = "1"
diesel = { version = "1.4", features = ["postgres"] }
env_logger = "0.9"
futures = "0.3.7"
http = "0.2"
log = { version = "0.4", features = ["release_max_level_debug"] }
num_cpus = "1.13"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.4"
simd-json-derive = "0.2"
snmalloc-rs = "0.2.6"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.5"
deadpool-postgres = "0.10.1"
mongodb = "2.2.0"
url = "2.1"
v_htmlescape = "0.14"
yarte = { version = "0.15", features = ["bytes-buf"] }

[build-dependencies]
askama = "0.11"
bindgen = "0.59"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
