[workspace]
members = [
    ".",
]

[package]
name = "tfb-anansi"
version = "0.1.0"
edition = "2021"

[features]
raw = []

[dependencies]
anansi = { git = "https://github.com/saru-tora/anansi", rev = "9522722", features = ["postgres", "minimal"] }
async-trait = "0.1.57"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
