[workspace]
members = [
    ".",
]

[package]
name = "tfb-anansi"
version = "0.1.0"
edition = "2021"

[features]
raw = []

[dependencies]
anansi = { git = "https://github.com/saru-tora/anansi", rev = "b59c7d0", features = ["postgres", "minimal", "redis"] }
async-trait = "0.1.57"
rand = "0.8.4"
serde = "1"
serde_json = "1"
tokio-postgres = "0.7.7"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
