[package]
name = "astra"
version = "0.1.0"
edition = "2021"

[dependencies]
astra = "0.1.2"
num_cpus = "1.13.1"
http = "0.2.6"
mimalloc = { version = "0.1", default-features = false }
simd-json = "0.4"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
